--- a/test/fixtures/rakutendata.yml
+++ b/test/fixtures/rakutendata.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  detail: MyString
+  name_RAKU: MyString
 
 two:
-  title: MyString
-  detail: MyString
+  name_RAKU: MyString
